--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ gurobipy==11.0.1
 ipykernel==6.29.5
 matplotlib==3.8.4
 multiprocess==0.70.16
+nbformat==5.10.4
 plotly==5.22.0
 seaborn==0.13.2
 tqdm==4.66.4
