Broaden gitignoring of temp files

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ venv/
 *.DS_STORE
 
 # Temporary files
-temp.html
+temp*
 
 ## Ignore complied files from Stan
 # Ignore all files in stan_models dir
