--- a/configs/base_params.yaml
+++ b/configs/base_params.yaml
@@ -1,5 +1,5 @@
-# Base parameter values
-cost_dict:
+## Parameter values common to all scenarios
+cost_values:
   carbon_price: 1.0 # €/kgCO2
   solar_capex: 1000.0 # €/kWp
   solar_lifetime: 20 # years
@@ -7,7 +7,10 @@ cost_dict:
   wind_capex: 5000.0 # €/kWp
   wind_lifetime: 20 # years
   wind_opex: 100 # €/kWp/year
-storage_dict:
+timeseries_values:
+  carbon_year: 2023
+  price_year: 2023
+storage_values:
   li-ion:
     discharge_ratio: 0.4 # kWp/kWh
   caes:
@@ -16,6 +19,3 @@ storage_dict:
     discharge_ratio: tbc
   vrfb:
     discharge_ratio: tbc
-ts_dict:
-  carbon_year: 2023
-  price_year: 2023
