--- a/configs/base_params.yaml
+++ b/configs/base_params.yaml
@@ -11,11 +11,11 @@ timeseries_values:
   carbon_year: 2023
   price_year: 2023
 storage_values:
-  li-ion:
+  Li-ion:
+    discharge_ratio: 2 # kWp/kWh
+  # CAES:
+  #   discharge_ratio: 0.5 # kWp/kWh
+  PCM:
+    discharge_ratio: 0.1 # kWp/kWh
+  VRBF:
     discharge_ratio: 0.4 # kWp/kWh
-  caes:
-    discharge_ratio: tbc
-  thermal:
-    discharge_ratio: tbc
-  vrfb:
-    discharge_ratio: tbc
