--- a/configs/base_params.yaml
+++ b/configs/base_params.yaml
@@ -11,11 +11,17 @@ timeseries_values:
   carbon_year: 2023
   price_year: 2023
 storage_values:
+  CAES:
+    discharge_ratio: 0.1 # kWp/kWh
+    depth_of_discharge: 0.4
   Li-ion:
     discharge_ratio: 2 # kWp/kWh
-  # CAES:
-  #   discharge_ratio: 0.5 # kWp/kWh
-  PCM:
-    discharge_ratio: 0.1 # kWp/kWh
+    depth_of_discharge: 0.9
+  Pb-acid:
+    discharge_ratio: 5 # kWp/kWh
+    depth_of_discharge: 0.5
   VRBF:
-    discharge_ratio: 0.4 # kWp/kWh
+    discharge_ratio: 0.5 # kWp/kWh
+    depth_of_discharge: 1.0
+  # PCM:
+  #   discharge_ratio: 0.05 # kWp/kWh
