--- a/configs/two_techs_settings.yaml
+++ b/configs/two_techs_settings.yaml
@@ -4,3 +4,6 @@ results_dir: [results, two_techs]
 
 model_settings:
   N_technologies: 2
+
+solver_settings:
+  time_limit: 6840 # (s), 2hrs with 5% buffer
