Implement scenario reduction

--- a/configs/prior_override_settings.yaml
+++ b/configs/prior_override_settings.yaml
@@ -3,4 +3,4 @@
 
 solver_settings:
   threads: 8
-  time_limit: 42000 # (s), 12hrs with 2.5% buffer
+  TimeLimit: 42000 # (s), 12hrs with 2.5% buffer
