--- a/configs/two_techs_settings.yaml
+++ b/configs/two_techs_settings.yaml
@@ -6,4 +6,4 @@ model_settings:
   N_technologies: 2
 
 solver_settings:
-  time_limit: 6840 # (s), 2hrs with 5% buffer
+  TimeLimit: 6840 # (s), 2hrs with 5% buffer
