--- a/configs/base_settings.yaml
+++ b/configs/base_settings.yaml
@@ -29,12 +29,13 @@ model_settings:
 solver_settings:
   verbose: True
   threads: 4 # no. Gurobi threads
-  time_limit: 10260 # (s), 3hrs with 5% buffer
+  TimeLimit: 10260 # (s), 3hrs with 5% buffer
 
 # Probabilistic model settings
 probability_settings: # tuples are [mu,sigma]
-  n_prior_samples: 100
-  n_posterior_samples: 50
+  n_prior_samples: 250
+  n_posterior_samples: 250
+  n_reduced_scenarios: 25
   sampling_thin_factor: 10
   measurement_sigma_reduction: 0.25
   load_level: [250000,25000]
