--- a/configs/base_settings.yaml
+++ b/configs/base_settings.yaml
@@ -3,6 +3,7 @@
 # Directories and file patterns
 dataset_dir: [data, processed]
 results_dir: [results, base]
+scenarios_dir: [scenarios, base]
 
 # Available years of data
 wind_years: &wind_years [2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]
