--- a/configs/CVaR_settings.yaml
+++ b/configs/CVaR_settings.yaml
@@ -6,3 +6,14 @@ model_settings:
   use_CVaR: True
   CVaR_alpha: 0.1
   CVaR_beta: 1
+
+solver_settings:
+  barHomogeneous: 1
+  # see https://support.gurobi.com/hc/en-us/community/posts/360077323472-Theoretical-Background-on-BarHomogeneous-parameter
+  Method: 2
+  # see https://docs.gurobi.com/projects/optimizer/en/current/reference/parameters.html#parametermethod
+
+probability_settings: # tuples are [mu,sigma]
+  n_prior_samples: 200
+  n_posterior_samples: 200
+  n_reduced_scenarios: 20
