--- a/configs/e_p20_settings.yaml
+++ b/configs/e_p20_settings.yaml
@@ -1,6 +1,8 @@
 ## Settings for experiment with uncertianty reduction epsilon=20%
 
+adopt: base
+
 scenarios_dir: [scenarios, epsilon_p20]
 
 probability_settings:
-  measurement_sigma_reduction: 0.25
+  measurement_sigma_reduction: 0.2
