--- a/configs/base_settings.yaml
+++ b/configs/base_settings.yaml
@@ -29,6 +29,7 @@ model_settings:
 # Default solver settings
 solver_settings:
   solver: gurobi # gurobi, highs
+  Method: 2 # only use barrier method, as always solves
   verbose: True
   threads: 2 # no. Gurobi threads
   TimeLimit: 10260 # (s), 3hrs with 5% buffer
