Create experiments for epsilon sensitivity analysis

--- a/configs/e20_settings.yaml
+++ b/configs/e20_settings.yaml
@@ -2,7 +2,8 @@
 
 adopt: base
 
-scenarios_dir: [scenarios, epsilon_p20]
+scenarios_dir: [scenarios, e20]
+results_dir: [results, e20]
 
 probability_settings:
   measurement_sigma_reduction: 0.2
