--- a/configs/CVaR_settings.yaml
+++ b/configs/CVaR_settings.yaml
@@ -7,7 +7,7 @@ results_dir: [results, CVaR]
 model_settings:
   use_CVaR: True
   CVaR_alpha: 0.1
-  CVaR_beta: 0.25
+  CVaR_n: 1
 
 solver_settings:
   threads: 3
