Gitignore results files as too many changes for git to track

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ venv/
 # Temporary files
 temp*
 
-## Ignore scenario files (too many for git)
+## Ignore scenario & results files (too many for git)
 scenarios/
+results/
 
 ## Ignore complied files from Stan
 # Ignore all files in stan_models dir
