Fix error with posterior no resampling timeseries parameters!

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ venv/
 temp*
 
 ## Ignore scenario & results files (too many for git)
-scenarios/
-results/
+scenarios*/
+results*/
 
 ## Ignore complied files from Stan
 # Ignore all files in stan_models dir
