Correct config files

--- a/configs/Pm10_settings.yaml
+++ b/configs/Pm10_settings.yaml
@@ -1,5 +1,7 @@
 ## Settings for experiment with electricity prices decreased by 10%
 
+adopt: base
+
 results_dir: [results, Pm10]
 
 price_years: ['2023-10']
