--- a/configs/Pp10_settings.yaml
+++ b/configs/Pp10_settings.yaml
@@ -1,5 +1,7 @@
 ## Settings for experiment with electricity prices increased by 10%
 
+adopt: base
+
 results_dir: [results, Pp10]
 
 price_years: ['2023+10']
