--- a/configs/data24_settings.yaml
+++ b/configs/data24_settings.yaml
@@ -1,5 +1,7 @@
 ## Settings for experiment with price and carbon data from 2024
 
+adopt: base
+
 results_dir: [results, data24]
 
 price_years: [2024]
