Add price and carbon year updating to scenario generation

--- a/configs/Pp10_settings.yaml
+++ b/configs/Pp10_settings.yaml
@@ -2,6 +2,8 @@
 
 adopt: base
 
+scenarios_dir: [scenarios, Pp10]
 results_dir: [results, Pp10]
 
-price_years: ['2023+10']
+probability_settings:
+  price_year: '2023+10'
