--- a/configs/Pm10_settings.yaml
+++ b/configs/Pm10_settings.yaml
@@ -2,6 +2,8 @@
 
 adopt: base
 
+scenarios_dir: [scenarios, Pm10]
 results_dir: [results, Pm10]
 
-price_years: ['2023-10']
+probability_settings:
+  price_year: '2023-10'
