Archive old version file

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ temp*
 scenarios*/
 results*/
 
+## Ignore old version files
+old/
+
 ## Ignore complied files from Stan
 # Ignore all files in stan_models dir
 stan_models/*
